tests/undefined/undefined.exp
Error --------------------------------------------------------- undefined.js:3:7

Cannot call `x.foo` because property `foo` is missing in uninitialized variable.


Error -------------------------------------------------------- undefined2.js:7:6

Cannot cast `name` to boolean because:
 - string is incompatible with boolean.
 - undefined is incompatible with boolean.


Error ------------------------------------------------------- undefined2.js:13:6

Cannot cast `bar[x]` to boolean because:
 - string is incompatible with boolean.
 - undefined is incompatible with boolean.


Error ------------------------------------------------------- undefined2.js:22:7

Cannot get `x[0]` because an indexer property is missing in `Number`.


Error ------------------------------------------------------- undefined2.js:29:6

Cannot cast `bar[x]` to boolean because:
 - string is incompatible with boolean.
 - string is incompatible with boolean.



Found 8 errors
